2020-03-15  Michael Catanzaro  <mcatanzaro@gnome.org>

        [ANGLE] Source/ThirdParty/ANGLE/src/libANGLE/Display.h:221:73: warning: implicitly-declared ‘egl::AttributeMap& egl::AttributeMap::operator=(const egl::AttributeMap&)’ is deprecated [-Wdeprecated-copy]
        https://bugs.webkit.org/show_bug.cgi?id=209015

        Reviewed by Darin Adler.

        Suppress compiler warning. If this were WebKit code, I might take the time to fix it, but
        with third-party code it's probably best to just turn off warnings that upstream is not
        using.

        * CMakeLists.txt:

2020-03-02  Alan Coon  <alancoon@apple.com>

        Add new Mac target numbers
        https://bugs.webkit.org/show_bug.cgi?id=208398

        Reviewed by Alexey Proskuryakov.

        * Configurations/Base.xcconfig:
        * Configurations/DebugRelease.xcconfig:
        * Configurations/Version.xcconfig:
        * Configurations/WebKitTargetConditionals.xcconfig:

2020-02-12  Michael Catanzaro  <mcatanzaro@gnome.org>

        Multiple GCC 10 build failures in ANGLE
        https://bugs.webkit.org/show_bug.cgi?id=207365

        Reviewed by Carlos Alberto Lopez Perez.

        * changes.diff: Updated.
        * include/platform/Platform.h: Add missing #include to get size_t.
        * src/common/PackedEnums.h: Remove problematic const_casts.

2020-02-12  Dean Jackson  <dino@apple.com>

        ANGLE has unused bison and glmark2 code
        https://bugs.webkit.org/show_bug.cgi?id=207597
        rdar://59361460

        Reviewed by Maciej Stachowiak.

        Remove some unused files.

        * changes.diff:
        * src/tests/perf_tests/glmark2Benchmark.cpp: Removed.
        * third_party/glmark2/BUILD.gn: Removed.
        * third_party/glmark2/README.angle: Removed.
        * tools/flex-bison/README.md: Removed.
        * tools/flex-bison/linux/bison.sha1: Removed.
        * tools/flex-bison/linux/flex.sha1: Removed.
        * tools/flex-bison/third_party/.gitattributes: Removed.